// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch /> renders and matches the snapshot 1`] = `
<label
  class="p-switch"
>
  <input
    class="p-switch__input"
    role="switch"
    type="checkbox"
  />
  <span
    class="p-switch__slider"
  />
  <span
    class="p-switch__label"
  >
    Switch
  </span>
</label>
`;

exports[`<Switch /> renders and matches the snapshot with disabled 1`] = `
<label
  class="p-switch"
>
  <input
    class="p-switch__input"
    disabled=""
    role="switch"
    type="checkbox"
  />
  <span
    class="p-switch__slider"
  />
  <span
    class="p-switch__label"
  >
    Disabled switch
  </span>
</label>
`;
